--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="org.secuso.privacyfriendlyexample">
+    package="org.secuso.privacyfriendlycameraruler">
 
     <application
         android:allowBackup="true"
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="org.secuso.privacyfriendlyexample.MainActivity"
+            android:name="org.secuso.privacyfriendlycameraruler.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
@@ -20,43 +20,43 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="org.secuso.privacyfriendlyexample.AboutActivity"
+            android:name="org.secuso.privacyfriendlycameraruler.AboutActivity"
             android:label="@string/about"
-            android:parentActivityName="org.secuso.privacyfriendlyexample.MainActivity"
+            android:parentActivityName="org.secuso.privacyfriendlycameraruler.MainActivity"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="org.secuso.privacyfriendlyexample.MainActivity" />
+                android:value="org.secuso.privacyfriendlycameraruler.MainActivity" />
         </activity>
         <activity
-            android:name="org.secuso.privacyfriendlyexample.HelpActivity"
+            android:name="org.secuso.privacyfriendlycameraruler.HelpActivity"
             android:label="@string/help"
-            android:parentActivityName="org.secuso.privacyfriendlyexample.MainActivity"
+            android:parentActivityName="org.secuso.privacyfriendlycameraruler.MainActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="org.secuso.privacyfriendlyexample.MainActivity" />
+                android:value="org.secuso.privacyfriendlycameraruler.MainActivity" />
         </activity>
         <activity
-            android:name="org.secuso.privacyfriendlyexample.SettingsActivity"
+            android:name="org.secuso.privacyfriendlycameraruler.SettingsActivity"
             android:label="@string/title_activity_settings"
-            android:parentActivityName="org.secuso.privacyfriendlyexample.MainActivity"
+            android:parentActivityName="org.secuso.privacyfriendlycameraruler.MainActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="org.secuso.privacyfriendlyexample.MainActivity" />
+                android:value="org.secuso.privacyfriendlycameraruler.MainActivity" />
         </activity>
         <activity
-            android:name="org.secuso.privacyfriendlyexample.GameActivity"
+            android:name="org.secuso.privacyfriendlycameraruler.GameActivity"
             android:label="@string/title_activity_game"
-            android:parentActivityName="org.secuso.privacyfriendlyexample.MainActivity"
+            android:parentActivityName="org.secuso.privacyfriendlycameraruler.MainActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="org.secuso.privacyfriendlyexample.MainActivity" />
+                android:value="org.secuso.privacyfriendlycameraruler.MainActivity" />
         </activity>
     </application>
 
