Added strings for calibration activity and layout. Included fix of calibration confirm button from ruler app.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,11 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".CalibrationActivity"
+            android:screenOrientation="portrait"
+            android:parentActivityName=".MainActivity">
+        </activity>
+        <activity
             android:name="org.secuso.privacyfriendlycameraruler.AboutActivity"
             android:label="@string/about"
             android:parentActivityName="org.secuso.privacyfriendlycameraruler.MainActivity"
