Placeholder reference editor. Implemented a bare bones temporary version of a proper user defined reference object editor in a form style. To be replaced by a DB-entry browser and editor.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,6 +83,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.secuso.privacyfriendlycameraruler.MainActivity" />
         </activity>
+        <activity android:name=".database.ReferenceEditor"
+            android:screenOrientation="portrait"
+            android:label="@string/title_activity_ref_editor"
+            android:parentActivityName="org.secuso.privacyfriendlycameraruler.SettingsActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="org.secuso.privacyfriendlycameraruler.SettingsActivity" />
+        </activity>
     </application>
 
 </manifest>
