--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/icon"
+        android:icon="@mipmap/launchericon_tapemeasure_mpfa"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
