--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,9 +10,7 @@
         android:smallScreens="true"
         android:xlargeScreens="true" />
 
-    <uses-feature
-        android:name="android.hardware.camera"
-        android:required="false" />
+    <uses-feature android:name="android.hardware.camera" android:required="false" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
@@ -32,29 +30,29 @@
         </activity>
         <activity
             android:name=".tutorial.TutorialActivity"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name="org.secuso.privacyfriendlycameraruler.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name="org.secuso.privacyfriendlycameraruler.screenruler.RulerActivity"
             android:label="@string/screen_ruler"
             android:launchMode="singleTop"
             android:parentActivityName="org.secuso.privacyfriendlycameraruler.screenruler.RulerActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name="org.secuso.privacyfriendlycameraruler.cameraruler.CameraActivity"
             android:label="@string/camera_ruler"
             android:launchMode="singleTop"
             android:parentActivityName="org.secuso.privacyfriendlycameraruler.cameraruler.CameraActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".screenruler.CalibrationActivity"
             android:parentActivityName=".screenruler.RulerActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait"/>
         <activity
             android:name="org.secuso.privacyfriendlycameraruler.AboutActivity"
             android:label="@string/about"
