Backport min android from android-5 (api21) to android-4.0 (api14). No functional changes

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "25.0.1"
     defaultConfig {
         applicationId 'org.secuso.privacyfriendlytapemeasure'
-        minSdkVersion 21
+        minSdkVersion 14        // android-4.0
         targetSdkVersion 25
         versionCode 1
         versionName '1.0'
