Change lint severity for `MissingTranslation` to warning

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,9 @@ android {
     productFlavors {
     }
     namespace 'org.secuso.privacyfriendlycameraruler'
+    lint {
+        lintConfig = file("lint.xml")
+    }
     kotlin {
         jvmToolchain(17)
     }
