--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
+    namespace 'org.secuso.privacyfriendlycameraruler'
     defaultConfig {
         applicationId 'org.secuso.privacyfriendlytapemeasure'
         minSdkVersion 21
@@ -16,14 +17,31 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    productFlavors {
+    buildFeatures {
+        buildConfig true
     }
-    namespace 'org.secuso.privacyfriendlycameraruler'
-    lint {
-        lintConfig = file("lint.xml")
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
+
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_17.toString()
+    }
+
     kotlin {
         jvmToolchain(17)
+    }
+
+    android.applicationVariants.configureEach { variant ->
+        variant.outputs.configureEach {
+            def appName = "pfa-dame"
+            outputFileName = appName + "-${variant.name}-v${variant.versionName}.apk"
+        }
+    }
+
+    lint {
+        lintConfig = file("lint.xml")
     }
 }
 
